--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Stacks 2.0
 lang: en
-description: Write an awesome description for your new site here
+description: Can't be evil
 
 ## local method ##
 # theme: jekyll-rtd-theme
