--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: jekyll-rtd-theme
-description: Just another documentation theme compatible with GitHub Pages
+title: Daemon-Technologies Documentation
+description: Can't be evil
 
 theme: null
 
@@ -17,15 +17,5 @@ plugins:
   - jekyll-mentions
 
 exclude:
-  - Makefile
-  - CNAME
-  - LICENSE
-  - update.sh
   - Gemfile
   - Gemfile.lock
-  - requirements.txt
-  - node_modules
-  - package.json
-  - package-lock.json
-  - webpack.config.js
-  - jekyll-rtd-theme.gemspec
